--- a/index.html
+++ b/index.html
@@ -7,13 +7,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bellybutton Biodiversity</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <style type="text/css">
-    .bg.-cover{
-      background-image: linear-gradient(to bottom, rgba(200, 136, 252, 0.295) 100%,rgba(241, 255, 88, 0.9) 0%), url('https://github.com/jp3tty/BellyButton/blob/main/images/nist-microbiome_resized.jpg?raw=true');
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center top;
-    }
   </style>
 
 </head>
@@ -23,9 +16,11 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-12 jumbotron text-center">
+      <div class="col-md-12 jumbotron text-center" style="background-image: url(https://github.com/jp3tty/BellyButton/blob/main/images/nist-microbiome_resized.jpg?raw=false);">
+        <font color="white">
         <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
+        </font>
       </div>
     </div>
     <div class="row">
